# stdformat

./: .gitignore  ATestClass.cpp  ATestClass.h  CMakeLists.txt  README.md  __charconv.h  __chrono.h  __format.h  chrono  example.cpp  format_test.cpp  main.cpp  test.cpp  type_traits
lib/: CMakeLists.txt
lib/include/: __format.h  charconv  format
lib/src/: __charconv.cpp  __format.cpp
test/: CMakeLists.txt  basic_test.cpp  fill_and_align_test.cpp  floating_point_test.cpp  integer_test.cpp  performance_test.cpp  testutil.h  user_defined_formatter_test.cpp
test/format_tests/: CMakeLists.txt  basic_test.cpp  fill_and_align_test.cpp  floating_point_test.cpp
test/include/: testutil.h
test/performance_tests/: CMakeLists.txt  benchmark.cpp  performance_test.cpp
